OO-4413: option in text entry to prevent twice the same input